Upgraded GD Star Rating to 1.9.15

--- a/wp-content/plugins/gd-star-rating/info/changelog.html
+++ b/wp-content/plugins/gd-star-rating/info/changelog.html
@@ -45,6 +45,12 @@
 </div>
 
 <div class="contents">
+<h3>Version 1.9.15 / march 1 2012</h3><ul>
+    <li><strong>new</strong> using user roles and capabilities instead of user levels</li>
+    <li><strong>new</strong> information panel for upcoming GDSR 2.0</li>
+    <li><strong>fix</strong> several deprecated warnings caused by use of user levels</li>
+    <li><strong>fix</strong> query parameter issue with the main CSS file ( thanks to Emil Sirbu: http://trafictube.ro )</li>
+</ul>
 <h3>Version 1.9.14 / february 10 2012</h3><ul>
     <li><strong>new</strong> filters for rating values before saving to database</li>
     <li><strong>fix</strong> votes keyword used for google rich snippets integration</li>
