Upgraded GD-Star Rating to 1.9.16

--- a/wp-content/plugins/gd-star-rating/info/changelog.html
+++ b/wp-content/plugins/gd-star-rating/info/changelog.html
@@ -45,6 +45,15 @@
 </div>
 
 <div class="contents">
+<h3>Version 1.9.16 / march 27 2012</h3><ul>
+    <li><strong>edit</strong> additional arguments for some of the rendering functions</li>
+    <li><strong>edit</strong> several new actions and filters for ajax and rendering ( thanks to Galen Wright-Watson )</li>
+    <li><strong>edit</strong> static directive added to functions in some classes ( thanks to Galen Wright-Watson )</li>
+    <li><strong>edit</strong> conditional load of debug version of gdsr.js ( thanks to Galen Wright-Watson )</li>
+    <li><strong>fix</strong> several potential undefined warnings ( thanks to Galen Wright-Watson )</li>
+    <li><strong>fix</strong> replaced deprecated wp_specialchars function ( thanks to Galen Wright-Watson )</li>
+    <li><strong>fix</strong> replaced deprecated fetch_rss function ( thanks to Galen Wright-Watson )</li>
+</ul>
 <h3>Version 1.9.15 / march 1 2012</h3><ul>
     <li><strong>new</strong> using user roles and capabilities instead of user levels</li>
     <li><strong>new</strong> information panel for upcoming GDSR 2.0</li>
