Upgraded GD Star Rating to 1.9.17

--- a/wp-content/plugins/gd-star-rating/info/changelog.html
+++ b/wp-content/plugins/gd-star-rating/info/changelog.html
@@ -45,6 +45,10 @@
 </div>
 
 <div class="contents">
+<h3>Version 1.9.17 / april 20 2012</h3><ul>
+    <li><strong>fix</strong> potential vulnerability for the t2 templates panel editor</li>
+    <li><strong>fix</strong> several warnings during the creation of new template</li>
+</ul>
 <h3>Version 1.9.16 / march 27 2012</h3><ul>
     <li><strong>edit</strong> additional arguments for some of the rendering functions</li>
     <li><strong>edit</strong> several new actions and filters for ajax and rendering ( thanks to Galen Wright-Watson )</li>
