Upgraded gd-star-rating to 1.9.18

--- a/wp-content/plugins/gd-star-rating/info/changelog.html
+++ b/wp-content/plugins/gd-star-rating/info/changelog.html
@@ -45,6 +45,10 @@
 </div>
 
 <div class="contents">
+<h3>Version 1.9.18 / june 17 2012</h3><ul>
+    <li><strong>edit</strong> some extra information for the upcoming GD Star Rating 2.0</li>
+    <li><strong>fix</strong> problem with changing the query with sorting for ratings</li>
+</ul>
 <h3>Version 1.9.17 / april 20 2012</h3><ul>
     <li><strong>fix</strong> potential vulnerability for the t2 templates panel editor</li>
     <li><strong>fix</strong> several warnings during the creation of new template</li>
