--- a/maintenance.html
+++ b/maintenance.html
@@ -2,7 +2,7 @@
 
 <head>
 
-<title>Under maintenance</title>
+<title>Maine Learning is temporarily offline</title>
 
 <style type="text/css">
 	body {
@@ -29,9 +29,9 @@
 <h1>Under maintenance</h1>
 
 <div id="text">
-	<p>Maine Learning is offline for regularly scheduled maintenance.</p>
+	<p>Maine Learning is offline for site improvements.</p>
 	
-	<p>The site should be back online by <strong>12pm EDT, September 24, 2012</strong>.</p>
+	<p>The site should be back online by <strong>1pm EDT, October 1, 2012</strong>.</p>
 	
 	<p>Thanks for your patience.</p>
 </div>
