Upgraded gd-star-rating to 1.9.22. (Note, upgrade filename doesn't include version.) Not active now, just for testing.

--- a/wp-content/plugins/gd-star-rating/info/changelog.html
+++ b/wp-content/plugins/gd-star-rating/info/changelog.html
@@ -45,6 +45,14 @@
 </div>
 
 <div class="contents">
+<h3>Version 1.9.22 / december 18 2012</h3><ul>
+    <li><strong>fix</strong> potential SQL injection vulnerability ( thanks to Jacek Sowinski )</li>
+</ul>
+<h3>Version 1.9.21 / november 29 2012</h3><ul>
+    <li><strong>edit</strong> improvements to the query sorting with multi ratings</li>
+    <li><strong>edit</strong> removed option for hidden google rich snippets</li>
+    <li><strong>edit</strong> few minor templates and rendering changes</li>
+</ul>
 <h3>Version 1.9.19 - 1.9.20 / july 25 2012</h3><ul>
     <li><strong>fix</strong> potential security issue with plugin export features</li>
 </ul>
